# truthnote

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  run.py
scenarios/: demo_cases.json  rumor_testset.json
scripts/: benchmark_dashboard.py  build_harvest_assets.py  build_truth_assets.py  cluster_typology.py  compute_type_priors.py  confusion_matrix.py  demo_runner.py  eval_baseline.py  eval_cases.py  eval_model_comparison.py  gen_typology_doc.py  label_design_message_types.py  quality_gate.ps1  quality_gate.sh  run_ablation.py  run_benchmark.py  run_benchmark_fast.py  run_blind_eval.py  run_external_benchmark.py  run_true_case_benchmark.py  speed_test.py  visualize_ablation.py
src/truthnote/: __init__.py  agents.py  attribution.py  benchmark.py  claimreview.py  closed_loop.py  config.py  debunk_index.py  dimensions.py  humanize.py  image.py  llm.py  main.py  memory.py  orchestrator.py  pipeline.py  promo_health.py  prompts.py  public_board.py  reverse_image.py  schemas.py  search.py
templates/: benchmark.html  dashboard.html  index.html
tests/: conftest.py  manual_image_smoke.py
tests/adversarial/: test_confirmation_backdoor.py
tests/contracts/: test_adopt_funnel.py  test_atom_aggregation.py  test_debunk_index_no_shortcircuit.py
tests/unit/: test_agents.py  test_atomizer.py  test_attribution.py  test_blind_eval.py  test_closed_loop.py  test_commonsense_checker.py  test_confirmation_wiring.py  test_debunk_index_guards.py  test_memory.py  (+13 more)
tools/: mcp_server.py
前端/: TruthNote-Design-Spec-v1.0.md  generate_icons.html
(+28 files in other folders)
